[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/small-mario.png" type="Texture" id=1]
[ext_resource path="res://Entities/Mario/Mario.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 208, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ) ],
"loop": false,
"name": "Slide",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Move",
"speed": 6.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Swim",
"speed": 6.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4, 7 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 4, 1 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 7, 8 )

[node name="Mario" type="KinematicBody2D"]
z_index = 2
collision_layer = 4
script = ExtResource( 2 )

[node name="Small" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="GroundCast" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 8 )

[node name="AreaHead" type="Area2D" parent="."]
position = Vector2( 0, -9 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaHead"]
shape = SubResource( 13 )

[node name="AreaFeet" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 9 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaFeet"]
shape = SubResource( 13 )

[node name="AreaBody" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBody"]
shape = SubResource( 14 )
[connection signal="body_entered" from="AreaHead" to="." method="_on_AreaHead_body_entered"]
[connection signal="body_entered" from="AreaFeet" to="." method="_on_AreaFeet_body_entered"]
[connection signal="body_entered" from="AreaBody" to="." method="_on_AreaBody_body_entered"]
